# NeuralNetworkBasicRecognition

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SSH_NN_PatternRecognition  SSH_NN_PatternRecognition.pub
NeuralNetwork_DigitRecognition/: CMakeLists.txt  NeuralNetwork_DigitRecognition.cpp  NeuralNetwork_DigitRecognition.h
include/: CMakeLists.txt
include/Config/: FileLoadConfig.h  NeuralNetworkConfig.h  ProjectConfig.h
include/Core/: EnumsContainer.h
include/Data/: NeuralDataBatch.h  NeuralDataFile.h
include/Engine/: Engine.h
include/Event/: MessageBus.h  Messages.h
include/Initializer/: Initializer.h
include/Loader/: FileLoader.h
include/Log/: Logger.h
include/Neural/: Activation.h  Cost.h  IActivation.h  ICost.h  Layer.h  LayerBuffer.h  NeuralNetwork.h  NeuralNetworkController.h  NeuralNetworkIterationOutput.h  NeuralNetworkResult.h  NeuralNetworkUtility.h
include/Rendering/: RenderingSystem.h  TextureLoader.h  UIRenderer.h
include/Settings/: FileLoadSettings.h
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt
src/private/Config/: NeuralNetworkConfig.cpp  ProjectConfig.cpp
src/private/Data/: NeuralDataBatch.cpp  NeuralDataFile.cpp
src/private/Engine/: Engine.cpp
src/private/Event/: MessageBus.cpp  Messages.cpp
src/private/Initializer/: Initializer.cpp
src/private/Loader/: FileLoader.cpp
src/private/Log/: Logger.cpp
src/private/Neural/: Cost.cpp  Layer.cpp  LayerBuffer.cpp  NeuralNetwork.cpp  NeuralNetworkController.cpp  NeuralNetworkIterationOutput.cpp  NeuralNetworkResult.cpp  NeuralNetworkUtility.cpp
src/private/Rendering/: RenderingSystem.cpp  TextureLoader.cpp  UIRenderer.cpp
src/private/Settings/: FileLoadSettings.cpp
src/private/main/: main.cpp
