# Add the libraries (assuming these are pre-built libraries)

#add_library(CustomLibrary STATIC IMPORTED)

# Specify the location of the library files

#set_target_properties(CustomLibrary PROPERTIES
#    IMPORTED_LOCATION "${CMAKE_SOURCE_DIR}/lib/CustomLibrary.a"
#)

# If you have multiple libraries, add them similarly and include them in the LIBS variable

#set(LIBS CustomLibrary)

# If needed, link libraries to other targets

#target_link_libraries(NeuralNetwork_Sources PRIVATE ${LIBS})